--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -21,6 +21,7 @@ test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
     "-display", "none", # 禁用图形界面
     ]
 test-success-exit-code = 33 # 由于我们指定了退出码为 33，所有非0的退出码都会被视为测试失败，所以需要再这里指定成功的退出码。
+test-timeout = 300          # (in seconds)
 
 [dependencies]
 bootloader = "0.9.23"
