处理内核栈,并支持中断处理

--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -17,6 +17,10 @@ panic = "abort"
 name = "should_panic"
 harness = false
 
+[[test]]
+name = "stack_overflow"
+harness = false
+
 # bootimage runner 会在QEMU的默认测试命令后添加 test-args 参数。（对于 cargo run 命令，这个参数会被忽略。）
 #在传递设备名 (isa-debug-exit)的同时，我们还传递了两个参数，iobase 和 iosize 。这两个参数指定了一个_I/O 端口_，我们的内核将通过它来访问设备。
 [package.metadata.bootimage]
