--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -36,6 +36,7 @@ test-timeout = 300          # (in seconds)
 [dependencies]
 bootloader = "0.9.23"
 lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
+pc-keyboard = "0.5.0"
 pic8259 = "0.10.2"
 spin = "0.9.5"
 uart_16550 = { version = "0.2.0", features = ["nightly"] }
