--- a/kernel/.cargo/config.toml
+++ b/kernel/.cargo/config.toml
@@ -2,7 +2,7 @@
 [unstable]
 # 重新编译 core 和 compiler_builtins 这两个crate
 # 编译需要提供源码，使用 rustup component add rust-src 来下载
-build-std = ["core", "compiler_builtins"]
+build-std = ["core", "compiler_builtins", "alloc"]
 # 为 compiler_builtins 启用了 mem 特性
 build-std-features = ["compiler-builtins-mem"]
 
