使用linkedListAllocator 进行内存分配管理

--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -42,3 +42,4 @@ spin = "0.9.5"
 uart_16550 = { version = "0.2.0", features = ["nightly"] }
 volatile = "0.2.6"
 x86_64 = "0.14.10"
+linked_list_allocator = "0.9.0"
