--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -23,6 +23,7 @@ harness = false
 
 # bootimage runner 会在QEMU的默认测试命令后添加 test-args 参数。（对于 cargo run 命令，这个参数会被忽略。）
 #在传递设备名 (isa-debug-exit)的同时，我们还传递了两个参数，iobase 和 iosize 。这两个参数指定了一个_I/O 端口_，我们的内核将通过它来访问设备。
+# 具体配置参考：https://github.com/rust-osdev/bootimage/blob/master/Readme.md
 [package.metadata.bootimage]
 # 设备 isa-debug-exit 采用 IO 端口映射方式访问（in&out 指令）， 其 I/O 端口地址为 0xf4，大小为 0x04 字节。
 # isa-debug-exit 设备的功能非常简单。当一个 value 写入 iobase 指定的端口时，它会导致QEMU以退出状态（exit status）(value << 1) | 1 退出。也就是说，当我们向端口写入 0 时，QEMU将以退出状态 (0 << 1) | 1 = 1 退出，而当我们向端口写入1时，它将以退出状态 (1 << 1) | 1 = 3 退出。
@@ -32,6 +33,7 @@ test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
     ]
 test-success-exit-code = 33 # 由于我们指定了退出码为 33，所有非0的退出码都会被视为测试失败，所以需要再这里指定成功的退出码。
 test-timeout = 300          # (in seconds)
+# run-args=["-s", "-S"]
 
 [dependencies]
 bootloader = { version = "0.9.23", features = ["map_physical_memory"]} # 使用map_physical_memory特性，这样我们就可以在内核中使用物理内存了。
