--- a/kernel/.cargo/config.toml
+++ b/kernel/.cargo/config.toml
@@ -10,7 +10,8 @@ build-std-features = ["compiler-builtins-mem"]
 # 避免每次传入 --target 参数
 target = "targets/x86_64-myos.json"
 rustflags=[
-    "--cfg", 'allocator="linked_list"',
+    # 设置内存分配器类型, 有三种: linked_list 和 bump 和 fixed_size(default)
+    "--cfg", 'allocator="linked_list"', 
 ]
 
 # 更方便在 QEMU 中运行, target_os=none 包含 myos
