--- a/kernel/targets/x86_64-unknown-linux-gnu.json
+++ b/kernel/targets/x86_64-unknown-linux-gnu.json
@@ -11,5 +11,10 @@
     "pre-link-args": [
         "-m64"
     ],
+    "pre-link-args": {
+        "ld.lld": [
+            "-Tkernel/src/arch/x86/linker.ld"
+        ]
+    },
     "morestack": false
 }
