--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -51,6 +51,9 @@ volatile = "0.2.6"
 x86_64 = "0.14.10"
 linked_list_allocator = "0.9.0"
 futures-util = { version = "0.3.26", default-features=false, features = ["alloc"] }
+bitflags = "2.0.2"
+bitfield = "0.14.0"
+modular-bitfield = "0.11.2"
 
 [dependencies.crossbeam-queue] # 无锁队列
 version = "0.2.1"
